# LLM-Evaluation-Harness

./: .env.example  Dockerfile.api  Dockerfile.dashboard  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: eval.yml
dashboard/: app.py
src/: db.py
src/api/: main.py
src/cache/: cache.py
src/datasets/: loader.py
src/runners/: runner.py
src/scorers/: __init__.py  bert_scorer.py  deepeval_scorer.py  orchestrator.py  ragas_scorer.py
src/worker/: dashboard.py  tasks.py  worker.py
tests/: test_pipeline.py
