[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-evaluation-harness"
version = "0.1.0"
description = "Multi-model LLM evaluation framework benchmarking GPT-4o, Claude, and Mistral on faithfulness, hallucination, and answer relevance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Evaluation frameworks
    "ragas>=0.2.0",
    "deepeval>=0.21.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    # Data
    "datasets>=2.18.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    # API server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    # Scoring
    "bert-score>=0.3.13",
    # HTTP client (async, for HuggingFace Inference API)
    "aiohttp>=3.9.0",
    # Cache & job queue
    "redis>=5.0.0",
    "rq>=1.16.0",
    "rq-dashboard>=0.6.0",
    "flask>=3.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
# Streamlit dashboard (also installed directly in Dockerfile.dashboard).
# Kept as an extra so `pip install -e ".[dashboard]"` works for local runs.
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
